--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-DB_HOST=your-db-host
+DB_HOST=database-1.catiwwaqihak.us-east-1.rds.amazonaws.com
 DB_PORT=5432
-DB_USER=youruser
-DB_PASSWORD=yourpassword
+DB_USER=postgres
+DB_PASSWORD=Aac21053
 DB_NAME=petadoption
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
