feat: update database configuration to use MySQL and add .env to .gitignore

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,5 @@
-DB_HOST=database-1.catiwwaqihak.us-east-1.rds.amazonaws.com
-DB_PORT=5432
-DB_USER=postgres
+DB_HOST=database-adopt-me.catiwwaqihak.us-east-1.rds.amazonaws.com
+DB_PORT=3306
+DB_USER=admin
 DB_PASSWORD=Aac21053
-DB_NAME=petadoption
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=youremail@gmail.com
-SMTP_PASS=your-email-app-password
+DB_NAME=adoptme
